@@ -40,7 +40,7 @@ exclude =
     mod,
 max-line-length = 99
 max-complexity = 10
-ignore = E126, E261, E265, E501, D202, D204, I100, I201, W503
+ignore = E126, E127, E261, E265, E501, D202, D204, I100, I201, W503
 
 [isort]
 lines_after_imports = 2
